// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot - only default props 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-tableWrapper-10"
  >
    <table
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root makeStyles-tableHead-4"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root makeStyles-tableHead-4 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Order ID
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-4 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Customer
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-4 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Total
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root makeStyles-tableBody-2"
      >
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8 makeStyles-tableRowOdd-3"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000001
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Mikaela Damper"
            >
              Mikaela Damper
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $61.46
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000002
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Rutger Barltrop"
            >
              Rutger Barltrop
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $61.45
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8 makeStyles-tableRowOdd-3"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000003
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Sebastian Jenny"
            >
              Sebastian Jenny
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $30.94
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000004
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Jordan Courteney"
            >
              Jordan Courteney
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $30.56
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8 makeStyles-tableRowOdd-3"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000005
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Tatum Rhys"
            >
              Tatum Rhys
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $75.70
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000006
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Celestia Elgood"
            >
              Celestia Elgood
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $74.37
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8 makeStyles-tableRowOdd-3"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000007
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Vin Jenkins"
            >
              Vin Jenkins
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $70.90
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000008
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Lauren Sharper"
            >
              Lauren Sharper
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $86.97
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8 makeStyles-tableRowOdd-3"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000009
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Elise Littlejohn"
            >
              Elise Littlejohn
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $56.88
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-8"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            10000010
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            <a
              href="#Brod Faughnan"
            >
              Brod Faughnan
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-5 MuiTableCell-body"
          >
            $97.58
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      class="MuiBox-root MuiBox-root-35"
    >
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        Page
      </span>
      <div
        class="MuiBox-root MuiBox-root-66"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-textField-6 MuiFormControl-marginDense"
          max="100"
          min="1"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              type="number"
              value="1"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-106"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        of 100
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-107"
    >
      <div
        class="makeStyles-root-108"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-109"
                type="text"
              >
                <div
                  class="makeStyles-valueContainer-110"
                >
                  <div
                    class=" css-cs1jeq-singleValue"
                  >
                    10 rows
                  </div>
                  <div
                    class="css-3y1qaa"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-multiple"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1wy0on6"
                >
                  <span
                    style="align-self: stretch; background-color: rgb(204, 204, 204); margin-bottom: 8px; margin-top: 8px; width: 1px;"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1dk35j4-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-19bqh2r"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-106"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-117"
    />
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          />
        </svg>
         Previous
      </span>
    </button>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
       | 
    </span>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Next 
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`client-side paginated snapshot - advances one page forward 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-tableWrapper-487"
  >
    <table
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root makeStyles-tableHead-481"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root makeStyles-tableHead-481 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Order ID
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-481 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Customer
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-481 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Total
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root makeStyles-tableBody-479"
      >
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485 makeStyles-tableRowOdd-480"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000011
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Trace Sushams"
            >
              Trace Sushams
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $44.97
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000012
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Guillaume Donavan"
            >
              Guillaume Donavan
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $22.97
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485 makeStyles-tableRowOdd-480"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000013
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Nickolaus Kave"
            >
              Nickolaus Kave
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $16.30
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000014
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Beltran Box"
            >
              Beltran Box
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $26.74
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485 makeStyles-tableRowOdd-480"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000015
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Patrizia Dust"
            >
              Patrizia Dust
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $66.83
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000016
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Cass Passo"
            >
              Cass Passo
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $17.79
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485 makeStyles-tableRowOdd-480"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000017
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Sullivan Fattorini"
            >
              Sullivan Fattorini
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $73.90
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000018
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Balduin Maycey"
            >
              Balduin Maycey
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $06.93
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485 makeStyles-tableRowOdd-480"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000019
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Valentine Khrishtafovich"
            >
              Valentine Khrishtafovich
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $63.59
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-485"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            10000020
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            <a
              href="#Thornton Syder"
            >
              Thornton Syder
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-482 MuiTableCell-body"
          >
            $38.72
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      class="MuiBox-root MuiBox-root-512"
    >
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        Page
      </span>
      <div
        class="MuiBox-root MuiBox-root-543"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-textField-483 MuiFormControl-marginDense"
          max="100"
          min="1"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              type="number"
              value="2"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-582 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-583"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        of 100
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-584"
    >
      <div
        class="makeStyles-root-585"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-586"
                type="text"
              >
                <div
                  class="makeStyles-valueContainer-587"
                >
                  <div
                    class=" css-cs1jeq-singleValue"
                  >
                    10 rows
                  </div>
                  <div
                    class="css-3y1qaa"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-multiple"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1wy0on6"
                >
                  <span
                    style="align-self: stretch; background-color: rgb(204, 204, 204); margin-bottom: 8px; margin-top: 8px; width: 1px;"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1dk35j4-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-19bqh2r"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-582 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-583"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-594"
    />
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          />
        </svg>
         Previous
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
       | 
    </span>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Next 
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`client-side paginated snapshot - advances one page forward and back to first 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-tableWrapper-646"
  >
    <table
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root makeStyles-tableHead-640"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root makeStyles-tableHead-640 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Order ID
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-640 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Customer
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-640 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Total
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root makeStyles-tableBody-638"
      >
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644 makeStyles-tableRowOdd-639"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000001
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Mikaela Damper"
            >
              Mikaela Damper
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $61.46
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000002
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Rutger Barltrop"
            >
              Rutger Barltrop
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $61.45
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644 makeStyles-tableRowOdd-639"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000003
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Sebastian Jenny"
            >
              Sebastian Jenny
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $30.94
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000004
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Jordan Courteney"
            >
              Jordan Courteney
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $30.56
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644 makeStyles-tableRowOdd-639"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000005
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Tatum Rhys"
            >
              Tatum Rhys
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $75.70
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000006
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Celestia Elgood"
            >
              Celestia Elgood
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $74.37
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644 makeStyles-tableRowOdd-639"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000007
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Vin Jenkins"
            >
              Vin Jenkins
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $70.90
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000008
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Lauren Sharper"
            >
              Lauren Sharper
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $86.97
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644 makeStyles-tableRowOdd-639"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000009
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Elise Littlejohn"
            >
              Elise Littlejohn
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $56.88
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-644"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            10000010
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            <a
              href="#Brod Faughnan"
            >
              Brod Faughnan
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-641 MuiTableCell-body"
          >
            $97.58
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      class="MuiBox-root MuiBox-root-671"
    >
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        Page
      </span>
      <div
        class="MuiBox-root MuiBox-root-702"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-textField-642 MuiFormControl-marginDense"
          max="100"
          min="1"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              type="number"
              value="1"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-741 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-742"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        of 100
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-743"
    >
      <div
        class="makeStyles-root-744"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-745"
                type="text"
              >
                <div
                  class="makeStyles-valueContainer-746"
                >
                  <div
                    class=" css-cs1jeq-singleValue"
                  >
                    10 rows
                  </div>
                  <div
                    class="css-3y1qaa"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-multiple"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1wy0on6"
                >
                  <span
                    style="align-self: stretch; background-color: rgb(204, 204, 204); margin-bottom: 8px; margin-top: 8px; width: 1px;"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1dk35j4-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-19bqh2r"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-741 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-742"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-753"
    />
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          />
        </svg>
         Previous
      </span>
    </button>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
       | 
    </span>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Next 
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`server-side paginated snapshot - advances one page forward 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-tableWrapper-169"
  >
    <table
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root makeStyles-tableHead-163"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root makeStyles-tableHead-163 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Order ID
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-163 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Customer
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-163 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Total
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root makeStyles-tableBody-161"
      >
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167 makeStyles-tableRowOdd-162"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000011
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Trace Sushams"
            >
              Trace Sushams
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $44.97
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000012
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Guillaume Donavan"
            >
              Guillaume Donavan
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $22.97
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167 makeStyles-tableRowOdd-162"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000013
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Nickolaus Kave"
            >
              Nickolaus Kave
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $16.30
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000014
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Beltran Box"
            >
              Beltran Box
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $26.74
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167 makeStyles-tableRowOdd-162"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000015
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Patrizia Dust"
            >
              Patrizia Dust
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $66.83
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000016
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Cass Passo"
            >
              Cass Passo
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $17.79
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167 makeStyles-tableRowOdd-162"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000017
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Sullivan Fattorini"
            >
              Sullivan Fattorini
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $73.90
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000018
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Balduin Maycey"
            >
              Balduin Maycey
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $06.93
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167 makeStyles-tableRowOdd-162"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000019
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Valentine Khrishtafovich"
            >
              Valentine Khrishtafovich
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $63.59
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-167"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            10000020
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            <a
              href="#Thornton Syder"
            >
              Thornton Syder
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-164 MuiTableCell-body"
          >
            $38.72
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      class="MuiBox-root MuiBox-root-194"
    >
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        Page
      </span>
      <div
        class="MuiBox-root MuiBox-root-225"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-textField-165 MuiFormControl-marginDense"
          max="100"
          min="1"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              type="number"
              value="2"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-264 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-265"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        of 100
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-266"
    >
      <div
        class="makeStyles-root-267"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-268"
                type="text"
              >
                <div
                  class="makeStyles-valueContainer-269"
                >
                  <div
                    class=" css-cs1jeq-singleValue"
                  >
                    10 rows
                  </div>
                  <div
                    class="css-3y1qaa"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-multiple"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1wy0on6"
                >
                  <span
                    style="align-self: stretch; background-color: rgb(204, 204, 204); margin-bottom: 8px; margin-top: 8px; width: 1px;"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1dk35j4-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-19bqh2r"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-264 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-265"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-276"
    />
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          />
        </svg>
         Previous
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
       | 
    </span>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Next 
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`server-side paginated snapshot - advances one page forward and back to first 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-tableWrapper-328"
  >
    <table
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root makeStyles-tableHead-322"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root makeStyles-tableHead-322 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Order ID
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-322 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Customer
          </th>
          <th
            class="MuiTableCell-root makeStyles-tableHead-322 MuiTableCell-head"
            colspan="1"
            scope="col"
          >
            Total
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root makeStyles-tableBody-320"
      >
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326 makeStyles-tableRowOdd-321"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000001
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Mikaela Damper"
            >
              Mikaela Damper
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $61.46
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000002
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Rutger Barltrop"
            >
              Rutger Barltrop
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $61.45
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326 makeStyles-tableRowOdd-321"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000003
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Sebastian Jenny"
            >
              Sebastian Jenny
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $30.94
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000004
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Jordan Courteney"
            >
              Jordan Courteney
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $30.56
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326 makeStyles-tableRowOdd-321"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000005
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Tatum Rhys"
            >
              Tatum Rhys
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $75.70
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000006
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Celestia Elgood"
            >
              Celestia Elgood
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $74.37
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326 makeStyles-tableRowOdd-321"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000007
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Vin Jenkins"
            >
              Vin Jenkins
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $70.90
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000008
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Lauren Sharper"
            >
              Lauren Sharper
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $86.97
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326 makeStyles-tableRowOdd-321"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000009
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Elise Littlejohn"
            >
              Elise Littlejohn
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $56.88
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-tableRowHover-326"
        >
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            10000010
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            <a
              href="#Brod Faughnan"
            >
              Brod Faughnan
            </a>
          </td>
          <td
            class="MuiTableCell-root makeStyles-tableCell-323 MuiTableCell-body"
          >
            $97.58
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      class="MuiBox-root MuiBox-root-353"
    >
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        Page
      </span>
      <div
        class="MuiBox-root MuiBox-root-384"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-textField-324 MuiFormControl-marginDense"
          max="100"
          min="1"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              type="number"
              value="1"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-423 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-424"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2"
      >
        of 100
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-425"
    >
      <div
        class="makeStyles-root-426"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-427"
                type="text"
              >
                <div
                  class="makeStyles-valueContainer-428"
                >
                  <div
                    class=" css-cs1jeq-singleValue"
                  >
                    10 rows
                  </div>
                  <div
                    class="css-3y1qaa"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-multiple"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1wy0on6"
                >
                  <span
                    style="align-self: stretch; background-color: rgb(204, 204, 204); margin-bottom: 8px; margin-top: 8px; width: 1px;"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1dk35j4-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-19bqh2r"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-423 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-424"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-435"
    />
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          />
        </svg>
         Previous
      </span>
    </button>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
       | 
    </span>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Next 
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
